<resources>
    <string name="app_name">BioFace</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_password">Create Password</string>
    <string name="hint_email">Enter your email</string>
    <string name="hint_name">Enter your name</string>
    <string name="healthy_solution">Healthy Solutions for Healthy Skin</string>
    <string name="welcome_to">Welcome to</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_icon">delete</string>
    <string name="history_icon">History Icon</string>
        <string name="email_empty_error">Email cannot be empty</string>
        <string name="email_invalid_error">Please enter a valid email address</string>
    <string name="bioface_image">logo bioface</string>

</resources>