<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".main.RegisterActivity">

    <!-- Container untuk semua elemen -->
    <LinearLayout
        android:id="@+id/container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Logo dan Text -->
        <LinearLayout
            android:id="@+id/logo_and_text_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="20dp">

            <ImageView
                android:id="@+id/iv_logoRegis"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_bio1"
                android:layout_marginEnd="5dp"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_regis1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome_to"
                    android:fontFamily="@font/poppinsbold"
                    android:textSize="25sp"
                    android:textColor="@color/pinkprimary"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:fontFamily="@font/mhiora"
                    android:textStyle="bold"
                    android:textSize="47sp"
                    android:textColor="@color/pinkprimary"/>
            </LinearLayout>
        </LinearLayout>

        <!-- Subtitle -->
        <TextView
            android:id="@+id/tv_subRegis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/healthy_solution"
            android:fontFamily="@font/poppinsmedium"
            android:textSize="15sp"
            android:textColor="@color/pinkprimary"
            android:textStyle="italic"
            android:layout_marginBottom="20dp"/>

        <!-- Input Section -->
        <LinearLayout
            android:id="@+id/r_ly_edt"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp"
            android:layout_marginBottom="20dp">

            <EditText
                android:id="@+id/r_edt_name"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:hint="@string/hint_name"
                android:background="@drawable/button_shape2"
                android:textSize="15sp"
                android:fontFamily="@font/poppinsregular"
                android:paddingStart="20dp"
                android:inputType="text"/>

            <EditText
                android:id="@+id/r_edt_email"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:hint="@string/hint_email"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_shape2"
                android:textSize="15sp"
                android:fontFamily="@font/poppinsregular"
                android:paddingStart="20dp"
                android:inputType="textEmailAddress"/>

            <EditText
                android:id="@+id/r_edt_password"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:layout_marginTop="10dp"
                android:hint="@string/hint_password"
                android:background="@drawable/button_shape2"
                android:paddingStart="20dp"
                android:textSize="15sp"
                android:fontFamily="@font/poppinsregular"
                android:inputType="textPassword"/>

            <EditText
                android:id="@+id/r_edt_confirmPass"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:layout_marginTop="10dp"
                android:hint="@string/hint_confirm_password"
                android:background="@drawable/button_shape2"
                android:paddingStart="20dp"
                android:textSize="15sp"
                android:fontFamily="@font/poppinsregular"
                android:inputType="textPassword"/>
        </LinearLayout>

        <!-- Register Button -->
        <Button
            android:id="@+id/r_btn_regis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/white"
            android:background="@drawable/button_shape"
            android:fontFamily="@font/poppinsbold"
            android:layout_marginHorizontal="32dp"
            android:layout_marginBottom="20dp"/>

        <!-- Login Text -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_account"
                android:fontFamily="@font/poppinsregular"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/txt_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/poppinssemibold"
                android:textSize="12sp"
                android:textColor="@color/pinksecondary"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
